--- a/src/main/resources/templates/question.html
+++ b/src/main/resources/templates/question.html
@@ -107,13 +107,13 @@
                 <div class="media">
                     <div class="media-left">
                         <a href="#">
-                            <img class="media-object img-rounded" th:src="${question.user.avatarUrl}"
+                            <img class="media-object img-rounded" th:src="${session.user.avatarUrl}"
                                  style="height: 38px; width: 38px">
                         </a>
                     </div>
                     <div class="media-body">
                         <h5 class="media-heading">
-                            <span th:text="${question.user.name}"></span>
+                            <span th:text="${session.user.name}"></span>
                         </h5>
                     </div>
                 </div>
