--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -18,7 +18,85 @@
     }
 </script>
 <body>
-<div th:insert="~{navigation :: nav}"></div>
+<div th:fragment="nav">
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <!-- Brand and toggle get grouped for better mobile display -->
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">讨论区</span>
+                </button>
+                <a class="navbar-brand" href="/">讨论区</a>
+            </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">课程推荐</span>
+                </button>
+                <a class="navbar-brand" href="/recommend">课程推荐</a>
+            </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">刷题</span>
+                </button>
+                <a class="navbar-brand" href="/code">刷题</a>
+            </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">校园周边</span>
+                </button>
+                <a class="navbar-brand" href="/campus">校园周边</a>
+            </div>
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                    <span class="sr-only">资源共享</span>
+                </button>
+                <a class="navbar-brand" href="/share">资源共享</a>
+            </div>
+            <!-- Collect the nav links, forms, and other content for toggling -->
+            <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                <form class="navbar-form navbar-left" action="/recommend" method="get">
+                    <div class="form-group">
+                        <input type="text" class="form-control" placeholder="搜索问题" name="search">
+                    </div>
+                    <button type="submit" class="btn btn-default">搜索</button>
+                </form>
+                <ul class="nav navbar-nav navbar-right">
+                    <li class="dropdown" th:if="${session.user != null}">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">
+                            <span>发帖</span>
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/publish?area=discuss" >讨论区</a></li>
+                            <li><a href="/publish?area=recommendation" >课程推荐</a></li>
+                            <li><a href="/publish?area=solution" >Coding</a></li>
+                            <li><a href="/publish?area=record" >校园周边</a></li>
+                            <li><a href="/publish?area=sharing" >资源共享</a></li>
+                        </ul>
+                    </li>
+                    <li><a href="/profile/replies">通知<span class="badge" th:if="${session.user != null}" th:text="${session.unReadCount}"></span></a></li>
+                    <li class="dropdown" th:if="${session.user != null}">
+                        <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true"
+                           aria-expanded="false">
+                            <span th:text="${session.user.getName()}"></span>
+                            <span class="caret"></span>
+                        </a>
+                        <ul class="dropdown-menu">
+                            <li><a href="/profile/information">个人资料</a></li>
+                            <li><a href="/profile/questions">我的问题</a></li>
+                            <li><a href="/logout">退出登录</a></li>
+                        </ul>
+                    </li>
+                    <li th:if="${session.user == null}">
+                        <a href="https://github.com/login/oauth/authorize?client_id=8001a245cc2ff9985a75&redirect_uri=http://localhost:8080/callback&scope=user&state=1">登录</a>
+                    </li>
+
+                </ul>
+            </div>
+        </div>
+    </nav>
+</div>
 <!--首页讨论区-->
 <div class="container-fluid">
     <div class="row">
@@ -35,7 +113,8 @@
                 </div>
                 <div class="media-body">
                     <h4 class="media-heading">
-                        <a th:href="@{'/recommend/' + ${recommend.id}}" th:text="${recommend.title}"></a>
+                        <a th:if="${session.user != null }" th:href="@{'/recommend/' + ${recommend.id}}" th:text="${recommend.title}"></a>
+                        <span th:if="${session.user == null}" th:text="${recommend.title}"></span>
                     </h4>
                     <span style="font-size: 12px;font-weight: normal;color: #999">
                         <span th:text="${recommend.viewCount}"></span>次浏览 ·
